# kagimcp-zed

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  PUBLISHING.md  README-EXTENSION.md  README.md  build.sh  extension.toml  justfile  update-version.sh
.github/workflows/: ci.yml  release.yml
configuration/: default_settings.jsonc  installation_instructions.md
crates/kagi-mcp-server/: Cargo.toml
crates/kagi-mcp-server/src/: main.rs
crates/kagiapi/: Cargo.toml  README.md
crates/kagiapi/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
src/: lib.rs  mcp_server_kagisearch.rs
