[package]
name = "kagimcp"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "kagi-mcp-server"
path = "src/bin/kagi-mcp-server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
zed_extension_api = "0.5.0"

# MCP server dependencies
tokio = { version = "1.0", features = ["rt", "macros", "io-std", "rt-multi-thread"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde_json = { version = "1.0", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

[features]
default = []
server = ["tokio", "reqwest", "serde_json", "uuid"]