[workspace]
members = ["crates/kagiapi", "crates/kagi-mcp-server", "."]
resolver = "2"

[package]
name = "kagimcp-zed"
version = "0.0.24"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/mcp_server_kagisearch.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
schemars = "0.8"
zed_extension_api = "0.5.0"
