[workspace]
members = ["crates/kagiapi", "crates/kagi-mcp-server", "."]
resolver = "2"

[package]
name = "kagimcp-zed"
version = "0.0.27-SNAPSHOT-1764799223"
edition = "2021"
publish = false
license = "MIT"

[lib]
path = "src/mcp_server_kagisearch.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
schemars = "1.1"
zed_extension_api = "0.7.0"
