[package]
name = "kagi-mcp-server"
version = "0.0.29"
edition = "2021"
license = "MIT"
description = "Kagi MCP Server for AI assistants"
repository = "https://github.com/jmylchreest/kagimcp-zed"
readme = "../../README.md"
keywords = ["kagi", "mcp", "ai", "search", "summarizer"]
categories = ["command-line-utilities"]

[[bin]]
name = "kagi-mcp-server"
path = "src/main.rs"

[dependencies]
kagiapi = { path = "../kagiapi" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = [
    "rt",
    "macros",
    "io-std",
    "rt-multi-thread",
] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
thiserror = "2.0"
